fix alignment style for images in braftonium blocks

--- a/blocks/custom-list-item/custom-list-item.scss
+++ b/blocks/custom-list-item/custom-list-item.scss
@@ -29,7 +29,8 @@ $list_item_container_admin: ".braftonium-custom-list-item > .block-editor-inner-
     }
 
     .wp-block-image {
-        margin: 0;
+        margin-top: 0;
+        margin-bottom:0;
     }
 }
 
