--- a/blocks/custom-list/custom-list.scss
+++ b/blocks/custom-list/custom-list.scss
@@ -30,7 +30,8 @@ $grid_container: "> .wrap.bfront";
 
     .wrap,
     .wp-block-image {
-        margin: 0;
+        margin-top: 0;
+        margin-bottom:0;
     }
 }
 
